Tidy up and add test data

--- a/view.html
+++ b/view.html
@@ -46,6 +46,7 @@
         <main id="main-content">
             <div class="wrapper wrapper--default">
 
+                <!-- Heading -->
                 <div class="intro">
                     <div>
                         <div class="intro__heading-container" data-status-container>
@@ -60,7 +61,7 @@
                     </div>
                 </div>
 
-                <form class="form" id="form-populate">
+                <form class="form">
 
                     <!-- Personal -->
                     <fieldset class="form__fieldset">
