Ensure heading (name) is populated on load

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="intro">
                     <div>
                         <div class="intro__heading-container" data-status-container>
-                            <h1 class="intro__heading heading heading--two" data-name-heading="name">[First Second]</h1>
+                            <h1 class="intro__heading heading heading--two" data-name-heading="name">Victoria Thomas</h1>
                         </div>
                         <p class="intro__subheading">
                             NSHCS registration number: 124047
