--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
                         <div class="form__item">
                             <div></div>
                             <label class="form__label sr-only" for="address-4">Address 4</label>
-                            <input class="form__input form__input--two-thirds" type="text" id="address-4" name="address-4" data-form="address-4" value="SE23 6FH"/>
+                            <input class="form__input form__input--two-thirds" type="text" id="address-4" name="address-4" data-form="address-4"/>
                         </div>
                         <div class="form__item">
                             <div></div>
                             <label class="form__label sr-only" for="address-5">Address 5</label>
-                            <input class="form__input form__input--one-quarter" type="text" id="address-5" name="address-5" data-form="address-5"/>
+                            <input class="form__input form__input--one-quarter" type="text" id="address-5" name="address-5" data-form="address-5" value="SE23 6FH"/>
                         </div>
                         <div class="form__item">
                             <label class="form__label" for="work-telephone">Work telephone</label>
