Joe done hacking about
Duplicated some pages and built out the nav a bit. Other pages are a bit incomplete.

--- a/support-index.html
+++ b/support-index.html
@@ -26,16 +26,16 @@
                     <nav class="header__nav">
                         <ul class="header__list">
                             <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
+                                <a href="#" class="header__link">Dashboard</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
+                                <a href="details-edit.html" class="header__link">Trainee details</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
+                                <a href="progress-edit.html" class="header__link">Progress</a>
                             </li>
-                            <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
+                            <li class="header__list-item header__list-item--active">
+                                <a href="support-index.html" class="header__link">Support</a>
                             </li>
                         </ul>
                     </nav>
@@ -50,14 +50,43 @@
                 <div class="intro">
                     <div>
                         <div class="intro__heading-container" data-status-container>
-                            <h1 class="intro__heading heading heading--two" data-name-heading="name">Prototypes</h1>
+                            <h1 class="intro__heading heading heading--two" data-name-heading="name">Victoria Thomas</h1>
                         </div>
-
-                        <p>
-							<a href="details-edit.html">Version 1</a>
+                        <p class="intro__subheading">
+                            NSHCS registration number: 124047
                         </p>
                     </div>
-                
+                </div>
+                <div class="intro">
+                    <div>
+                        <p class="intro__subheading">Open support cases</p>
+                    </div>
+                </div>
+				<div>
+				  <table width="66%" border="0">
+				    <tbody>
+				      <tr>
+				        <td><a href="support-edit.html">Bereavement</a></td>
+				        <td>19 May 2022</td>
+			          </tr>
+			        </tbody>
+			      </table>
+				</div>
+				<div class="intro">
+				  <div>
+                        <p class="intro__subheading">Closed support cases</p>
+                    </div>
+			</div>
+				<div>
+				  <table width="66%" border="0">
+				    <tbody>
+				      <tr>
+				        <td><a href="#">Sickness</a></td>
+				        <td>10 December 2022</td>
+			          </tr>
+			        </tbody>
+			      </table>
+				</div>
             </div>
         </main>
         <script src="./assets/dist/js/main.js"></script>
