--- a/00.html
+++ b/00.html
@@ -26,16 +26,16 @@
                     <nav class="header__nav">
                         <ul class="header__list">
                             <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
+                                <a href="#" class="header__link">Dashboard</a>
+                            </li>
+                            <li class="header__list-item header__list-item--active">
+                                <a href="#" class="header__link">Trainee details</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
+                                <a href="#" class="header__link">Progression</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
-                            </li>
-                            <li class="header__list-item">
-                                <a href="#" class="header__link">&nbsp;</a>
+                                <a href="support-edit.html" class="header__link">Support</a>
                             </li>
                         </ul>
                     </nav>
@@ -50,14 +50,21 @@
                 <div class="intro">
                     <div>
                         <div class="intro__heading-container" data-status-container>
-                            <h1 class="intro__heading heading heading--two" data-name-heading="name">Prototypes</h1>
+                            <h1 class="intro__heading heading heading--two" data-name-heading="name">Trainee Management System - PROTOTYPE</h1>
                         </div>
-
-                        <p>
-							<a href="details-edit.html">Version 1</a>
-                        </p>
+ <!--                        <p class="intro__subheading">
+                            NSHCS registration number: 124047
+                        </p> -->
                     </div>
-                
+<!--                     <div>
+                        <button class="intro__button button button--green" data-save>Save changes</button>
+                        <button class="intro__button button button--cancel" data-cancel>Cancel</button>
+                    </div> -->
+                </div>
+                <div class="form__item">
+                    <div class="form__label" for="name"><a href="details-edit.html">Version 1.0</a></div>
+                    <div data-form="name"></div>
+                </div>
             </div>
         </main>
         <script src="./assets/dist/js/main.js"></script>
