--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
                         <div class="intro__heading-container" data-status-container>
                             <h1 class="intro__heading heading heading--two" data-name-heading="name">Prototypes</h1>
                         </div>
-
                         <p>
-							<a href="details-edit.html">Version 1</a>
+							<a href="templates/details-view.html">Version 1</a>
                         </p>
                     </div>
-                
+                </div>
             </div>
         </main>
         <script src="./assets/dist/js/main.js"></script>
