Fix markup and update base data

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <h1 class="intro__heading heading heading--two" data-name-heading="name">Prototypes</h1>
                         </div>
                         <p>
-							<a href="templates/details-view.html">Version 1</a>
+							<a class="basic-link" href="templates/details-view.html">Version 1</a>
                         </p>
                     </div>
                 </div>
