Fix index heading

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <!-- Heading -->
                 <div class="intro">
                     <div>
-                        <div class="intro__heading-container" data-status-container>
-                            <h1 class="intro__heading heading heading--two" data-name-heading="name">Prototypes</h1>
+                        <div class="intro__heading-container">
+                            <h1 class="intro__heading heading heading--two">Prototypes</h1>
                         </div>
                         <p>
 							<a class="basic-link" href="templates/details-view.html">Version 1</a>
